syntax = "proto3";

package service.ourchat.unregister;

message UnregisterRequest {}

message UnregisterResponse {}
